# brimstone

./: .gitignore  Cargo.toml  README.md  resources.rc
rayexlib/: Cargo.toml
rayexlib/src/: debug.rs  lib.rs  scene_manager.rs  state_manager.rs  timer.rs  traits.rs  window.rs
rayexlib/src/collision/: circle.rs  collider_info.rs  mod.rs  ray.rs  rect.rs
rayexlib/src/raylib_plugins/: camera.rs  dotted_line.rs  frame_limiter.rs  image.rs  texture.rs
rayexlib/src/sprite/: animated.rs  mod.rs  parallax.rs  sprite_2d.rs  transform.rs
rayexlib/src/sprite/animation_player_2d/: animation_strip_2d.rs  builder.rs  mod.rs
resources/player/adventurer/: SpriteSheetGimp.xcf
src/: debug.rs  gamestate.rs  main.rs  math.rs  paths.rs  scene_machine.rs  state_machine.rs  window.rs
src/collision/: circle.rs  mod.rs  polygon.rs  ray.rs  rect.rs
src/engine/: button.rs  mod.rs  state_machine.rs  window.rs
src/engine/collision/: circle.rs  mod.rs  ray.rs  rect.rs
src/engine/raylib_plugins/: camera.rs  image.rs  mod.rs  texture.rs
src/engine/sprite/: animated.rs  mod.rs  transform.rs
src/player/: controls.rs  default.rs  mod.rs  states.rs
src/player/state_functions/: enter.rs  exit.rs  mod.rs  update.rs
src/raylib_plugins/: camera.rs  dotted_line.rs  frame_limiter.rs  image.rs  mod.rs  texture.rs
src/scene/: loading.rs  main_menu.rs  mod.rs  pause_menu.rs  world.rs
src/scenes/: global.rs  loading.rs  main_menu.rs  mod.rs  pause_menu.rs  splash_screen.rs  world.rs
src/sprite/: animated.rs  animation_player.rs  mod.rs  parallax.rs  sprite_2d.rs  transform.rs
(+13 files in other folders)
