[package]
name = "brimstone"
version = "0.1.0"
edition = "2021"
authors = ["Alexander Velez <alexandervelez7245@gmail.com>"]
description = "8-Bit Brimstone Brawl, 2d fighting game"
#readme = "README.md"
#repository = "https://github.com/Alex-Velez/???"
license = "MIT"
keywords = ["2d", "fighter", "game"]
categories = ["game"]

[dependencies]
raylib = "3.7.0"

[build-dependencies]
embed-resource = "2.2.0"

# [profile.dev]
# lto = false

# start: 12-12-2022

[features]
debug = []
