[package]
name = "rayexlib"
version = "0.1.0"
edition = "2021"
authors = ["Alexander Velez <alexandervelez7245@gmail.com>"]
description = "game engine utilities built on top of raylib"
#readme = "README.md"
repository = "https://github.com/Alex-Velez/brimstone"
license = "MIT"
keywords = ["2d", "game", "engine"]
categories = ["game"]

[dependencies]
raylib = "3.7.0"

# [profile.dev]
# lto = false

# start: 12-12-2022

[features]
debug = []
